refactor(schedule): add versioned timetables