@@ -1,16 +1,19 @@
 package vn.edu.fpt.myfschool.service.impl;
 
-import vn.edu.fpt.myfschool.entity.*;
-import vn.edu.fpt.myfschool.service.*;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import vn.edu.fpt.myfschool.common.dto.*;
+import vn.edu.fpt.myfschool.common.enums.AssignmentStatus;
 import vn.edu.fpt.myfschool.common.enums.Shift;
+import vn.edu.fpt.myfschool.common.enums.TimetableStatus;
 import vn.edu.fpt.myfschool.common.exception.ConflictException;
 import vn.edu.fpt.myfschool.common.exception.ResourceNotFoundException;
+import vn.edu.fpt.myfschool.entity.*;
 import vn.edu.fpt.myfschool.repository.*;
+import vn.edu.fpt.myfschool.service.ScheduleService;
 
+import java.time.LocalDate;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -18,137 +21,147 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 @Transactional
 public class ScheduleServiceImpl implements ScheduleService {
-
     private final ScheduleRepository scheduleRepository;
     private final TeachingAssignmentRepository teachingAssignmentRepository;
+    private final TimetableRepository timetableRepository;
     private final ClassRepository classRepository;
     private final TeacherRepository teacherRepository;
     private final SemesterRepository semesterRepository;
 
-    @Transactional(readOnly = true)
     @Override
-    public ClassScheduleDto getClassSchedule(Long classId, Long semesterId) {
+    @Transactional(readOnly = true)
+    public ClassScheduleDto getClassSchedule(Long classId, Long semesterId, LocalDate date) {
         SchoolClass cls = classRepository.findById(classId)
             .orElseThrow(() -> new ResourceNotFoundException("Class", "id", classId));
-        Semester sem = semesterRepository.findById(semesterId)
+        Semester semester = semesterRepository.findById(semesterId)
             .orElseThrow(() -> new ResourceNotFoundException("Semester", "id", semesterId));
-
-        List<Schedule> schedules = scheduleRepository.findByClassIdAndSemesterId(classId, semesterId);
-        Map<Integer, List<Schedule>> byDay = schedules.stream()
-            .collect(Collectors.groupingBy(Schedule::getDayOfWeek));
-
-        List<DayScheduleDto> days = new ArrayList<>();
-        for (int d = 1; d <= 7; d++) {
-            List<Schedule> daySchedules = byDay.getOrDefault(d, List.of());
-            List<ScheduleDto> morning = daySchedules.stream()
-                .filter(s -> s.getShift() == Shift.MORNING).map(this::toDto)
-                .collect(Collectors.toList());
-            List<ScheduleDto> afternoon = daySchedules.stream()
-                .filter(s -> s.getShift() == Shift.AFTERNOON).map(this::toDto)
-                .collect(Collectors.toList());
-            days.add(new DayScheduleDto(d, getDayName(d), morning, afternoon));
-        }
-
-        return new ClassScheduleDto(classId, cls.getName(), semesterId, sem.getName(), days);
+        Timetable timetable = resolveTimetable(classId, semesterId, date);
+        List<Schedule> schedules = timetable == null ? List.of()
+            : scheduleRepository.findByTimetableIdOrderByDayOfWeekAscPeriodAsc(timetable.getId());
+        return buildSchedule(cls.getId(), cls.getName(), semester, timetable, schedules);
     }
 
-    @Transactional(readOnly = true)
     @Override
-    public ClassScheduleDto getTeacherSchedule(Long teacherId, Long semesterId) {
+    @Transactional(readOnly = true)
+    public ClassScheduleDto getTeacherSchedule(Long teacherId, Long semesterId, LocalDate date) {
         Teacher teacher = teacherRepository.findById(teacherId)
             .orElseThrow(() -> new ResourceNotFoundException("Teacher", "id", teacherId));
-        Semester sem = semesterRepository.findById(semesterId)
+        Semester semester = semesterRepository.findById(semesterId)
             .orElseThrow(() -> new ResourceNotFoundException("Semester", "id", semesterId));
-
-        List<Schedule> schedules = scheduleRepository.findByTeacherIdAndSemesterId(teacherId, semesterId);
-        Map<Integer, List<Schedule>> byDay = schedules.stream()
-            .collect(Collectors.groupingBy(Schedule::getDayOfWeek));
-
-        List<DayScheduleDto> days = new ArrayList<>();
-        for (int d = 1; d <= 7; d++) {
-            List<Schedule> daySchedules = byDay.getOrDefault(d, List.of());
-            List<ScheduleDto> morning = daySchedules.stream()
-                .filter(s -> s.getShift() == Shift.MORNING).map(this::toDto)
-                .collect(Collectors.toList());
-            List<ScheduleDto> afternoon = daySchedules.stream()
-                .filter(s -> s.getShift() == Shift.AFTERNOON).map(this::toDto)
-                .collect(Collectors.toList());
-            days.add(new DayScheduleDto(d, getDayName(d), morning, afternoon));
-        }
-
-        return new ClassScheduleDto(teacherId, teacher.getUser().getName(), semesterId, sem.getName(), days);
+        List<Timetable> timetables = date == null
+            ? timetableRepository.findOverlappingPublished(semesterId, semester.getStartDate(), semester.getEndDate()).stream()
+                .filter(item -> item.getStatus() == TimetableStatus.ACTIVE).toList()
+            : timetableRepository.findEffectiveBySemester(semesterId, date);
+        List<Schedule> schedules = timetables.stream()
+            .flatMap(item -> scheduleRepository.findByTimetableIdOrderByDayOfWeekAscPeriodAsc(item.getId()).stream())
+            .filter(item -> item.getAssignment().getTeacher().getId().equals(teacherId)).toList();
+        return buildSchedule(teacherId, teacher.getUser().getName(), semester, null, schedules);
     }
 
     @Override
     public ScheduleDto createSchedule(ScheduleRequest request) {
-        TeachingAssignment ta = teachingAssignmentRepository.findById(request.assignmentId())
+        Timetable timetable = timetableRepository.findById(request.timetableId())
+            .orElseThrow(() -> new ResourceNotFoundException("Timetable", "id", request.timetableId()));
+        if (timetable.getStatus() != TimetableStatus.DRAFT) {
+            throw new ConflictException("Chỉ được chỉnh sửa thời khóa biểu nháp");
+        }
+        TeachingAssignment assignment = teachingAssignmentRepository.findById(request.assignmentId())
             .orElseThrow(() -> new ResourceNotFoundException("TeachingAssignment", "id", request.assignmentId()));
-
-        Long classId = ta.getCls().getId();
-        Long semesterId = ta.getSemester().getId();
-
-        if (scheduleRepository.findByAssignmentIdAndDayOfWeekAndPeriod(
-                request.assignmentId(), request.dayOfWeek(), request.period()).isPresent()) {
-            throw new ConflictException("Phan cong da co tai khung gio nay");
+        if (assignment.getStatus() != AssignmentStatus.ACTIVE) {
+            throw new ConflictException("Phân công giảng dạy không còn hiệu lực");
+        }
+        if (!assignment.getCls().getId().equals(timetable.getCls().getId())) {
+            throw new ConflictException("Phân công không thuộc lớp của thời khóa biểu");
+        }
+        if (scheduleRepository.findByTimetableIdAndDayOfWeekAndPeriod(
+                timetable.getId(), request.dayOfWeek(), request.period()).isPresent()) {
+            throw new ConflictException("Lớp đã có môn học tại khung giờ này");
         }
 
-        // Check teacher conflict (same teacher, different assignment, same day+period+semester)
-        List<TeachingAssignment> teacherAssignments = teachingAssignmentRepository
-            .findByTeacherIdAndSemesterIdAndStatus(ta.getTeacher().getId(), semesterId,
-                vn.edu.fpt.myfschool.common.enums.AssignmentStatus.ACTIVE);
-        for (TeachingAssignment otherTa : teacherAssignments) {
-            if (!otherTa.getId().equals(request.assignmentId())) {
-                if (scheduleRepository.findByAssignmentIdAndDayOfWeekAndPeriod(
-                        otherTa.getId(), request.dayOfWeek(), request.period()).isPresent()) {
-                    throw new ConflictException("Giao vien da co tiet day tai khung gio nay");
-                }
-            }
-        }
+        Schedule schedule = new Schedule();
+        schedule.setTimetable(timetable);
+        schedule.setAssignment(assignment);
+        schedule.setDayOfWeek(request.dayOfWeek());
+        schedule.setPeriod(request.period());
+        schedule.setRoom(request.room());
+        schedule.setShift(request.shift());
+        return toDto(scheduleRepository.save(schedule));
+    }
 
-        Schedule sch = new Schedule();
-        sch.setAssignment(ta);
-        sch.setDayOfWeek(request.dayOfWeek());
-        sch.setPeriod(request.period());
-        sch.setRoom(request.room());
-        sch.setShift(request.shift());
-        sch = scheduleRepository.save(sch);
-        return toDto(sch);
+    @Override
+    @Transactional(readOnly = true)
+    public List<ScheduleDto> getTimetableSlots(Long timetableId) {
+        if (!timetableRepository.existsById(timetableId)) {
+            throw new ResourceNotFoundException("Timetable", "id", timetableId);
+        }
+        return scheduleRepository.findByTimetableIdOrderByDayOfWeekAscPeriodAsc(timetableId)
+            .stream().map(this::toDto).toList();
     }
 
     @Override
     public void deleteSchedule(Long scheduleId) {
-        scheduleRepository.deleteById(scheduleId);
+        Schedule schedule = scheduleRepository.findById(scheduleId)
+            .orElseThrow(() -> new ResourceNotFoundException("Schedule", "id", scheduleId));
+        if (schedule.getTimetable().getStatus() != TimetableStatus.DRAFT) {
+            throw new ConflictException("Không thể sửa thời khóa biểu đã phát hành");
+        }
+        scheduleRepository.delete(schedule);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<Integer> getAvailablePeriods(Long classId, Long semesterId, Integer dayOfWeek, Shift shift) {
-        List<Schedule> existing = scheduleRepository.findByClassIdAndSemesterId(classId, semesterId);
+        Timetable timetable = timetableRepository
+            .findFirstByClsIdAndSemesterIdAndStatusOrderByVersionDesc(classId, semesterId, TimetableStatus.DRAFT)
+            .or(() -> timetableRepository.findFirstByClsIdAndSemesterIdAndStatusOrderByVersionDesc(
+                classId, semesterId, TimetableStatus.ACTIVE)).orElse(null);
+        List<Schedule> existing = timetable == null ? List.of()
+            : scheduleRepository.findByTimetableIdOrderByDayOfWeekAscPeriodAsc(timetable.getId());
         Set<Integer> occupied = existing.stream()
-            .filter(s -> s.getDayOfWeek().equals(dayOfWeek) && s.getShift() == shift)
+            .filter(item -> item.getDayOfWeek().equals(dayOfWeek) && item.getShift() == shift)
             .map(Schedule::getPeriod).collect(Collectors.toSet());
-        List<Integer> all = shift == Shift.MORNING ? List.of(1,2,3,4,5) : List.of(6,7,8,9,10);
-        return all.stream().filter(p -> !occupied.contains(p)).collect(Collectors.toList());
+        List<Integer> all = shift == Shift.MORNING ? List.of(1, 2, 3, 4, 5) : List.of(6, 7, 8, 9, 10);
+        return all.stream().filter(period -> !occupied.contains(period)).toList();
     }
 
-    private ScheduleDto toDto(Schedule s) {
-        TeachingAssignment ta = s.getAssignment();
-        return new ScheduleDto(
-            s.getId(),
-            ta.getId(),
-            ta.getCls().getId(), ta.getCls().getName(),
-            ta.getSubject().getId(), ta.getSubject().getName(), ta.getSubject().getCode(),
-            ta.getTeacher().getId(), ta.getTeacher().getUser().getName(),
-            ta.getSemester().getId(), ta.getSemester().getName(),
-            s.getDayOfWeek(), getDayName(s.getDayOfWeek()),
-            s.getPeriod(), s.getRoom(), s.getShift()
-        );
+    private Timetable resolveTimetable(Long classId, Long semesterId, LocalDate date) {
+        if (date != null) {
+            return timetableRepository.findEffective(classId, semesterId, date).stream().findFirst().orElse(null);
+        }
+        return timetableRepository.findFirstByClsIdAndSemesterIdAndStatusOrderByVersionDesc(
+            classId, semesterId, TimetableStatus.ACTIVE).orElse(null);
+    }
+
+    private ClassScheduleDto buildSchedule(Long ownerId, String ownerName, Semester semester,
+                                           Timetable timetable, List<Schedule> schedules) {
+        Map<Integer, List<Schedule>> byDay = schedules.stream().collect(Collectors.groupingBy(Schedule::getDayOfWeek));
+        List<DayScheduleDto> days = new ArrayList<>();
+        for (int day = 1; day <= 7; day++) {
+            List<Schedule> daySchedules = byDay.getOrDefault(day, List.of());
+            List<ScheduleDto> morning = daySchedules.stream().filter(item -> item.getShift() == Shift.MORNING).map(this::toDto).toList();
+            List<ScheduleDto> afternoon = daySchedules.stream().filter(item -> item.getShift() == Shift.AFTERNOON).map(this::toDto).toList();
+            days.add(new DayScheduleDto(day, getDayName(day), morning, afternoon));
+        }
+        return new ClassScheduleDto(ownerId, ownerName, semester.getId(), semester.getName(),
+            timetable == null ? null : timetable.getId(), timetable == null ? null : timetable.getVersion(), days);
+    }
+
+    private ScheduleDto toDto(Schedule schedule) {
+        TeachingAssignment assignment = schedule.getAssignment();
+        Timetable timetable = schedule.getTimetable();
+        return new ScheduleDto(schedule.getId(), timetable.getId(), timetable.getVersion(), assignment.getId(),
+            assignment.getCls().getId(), assignment.getCls().getName(),
+            assignment.getSubject().getId(), assignment.getSubject().getName(), assignment.getSubject().getCode(),
+            assignment.getTeacher().getId(), assignment.getTeacher().getUser().getName(),
+            timetable.getSemester().getId(), timetable.getSemester().getName(),
+            schedule.getDayOfWeek(), getDayName(schedule.getDayOfWeek()),
+            schedule.getPeriod(), schedule.getRoom(), schedule.getShift());
     }
 
     private String getDayName(int day) {
         return switch (day) {
-            case 1 -> "Chu nhat"; case 2 -> "Thu 2"; case 3 -> "Thu 3";
-            case 4 -> "Thu 4"; case 5 -> "Thu 5"; case 6 -> "Thu 6"; case 7 -> "Thu 7";
-            default -> "";
+            case 1 -> "Chủ nhật"; case 2 -> "Thứ 2"; case 3 -> "Thứ 3"; case 4 -> "Thứ 4";
+            case 5 -> "Thứ 5"; case 6 -> "Thứ 6"; case 7 -> "Thứ 7"; default -> "";
         };
     }
 }
